general updates to formatting

--- a/bootstraptest.html
+++ b/bootstraptest.html
@@ -42,11 +42,47 @@
          <p>Ut enim ad..</p>
        </div>
      </div>
-    </div> 
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+    <form class="form-horizontal">
+    <div class="table-responsive">
+        <table class="table table-bordered table-striped table-highlight">
+            <thead>
+                <th>Name</th>
+                <th>Date</th>
+                <th>Cost</th>
+                <th>Billing Type</th>
+                <th>Tax</th>
+                <th>Other Col</th>
+                <th>Other Col</th>
+                <th>Other Col</th>
+                <th>Total</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><input type="text" class="form-control" value="Some Long Name Here"/></td>
+                    <td><input type="text" class="form-control" value="13-Jul-2015"/></td>
+                    <td><input type="text" class="form-control" value="$12355.12"/></td>
+                    <td>
+                        <select class="form-control">
+                            <option>Monthly</option>
+                            <option>Yearly</option>
+                        </select>
+                    </td>
+                    <td><input type="text" class="form-control" value="another long value"/></td>
+                    <td><input type="text" class="form-control" value="some val"/></td>
+                    <td><input type="text" class="form-control" value="some val"/></td>
+                    <td><input type="text" class="form-control" value="some val"/></td>
+                    <td>$505.79</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</form>
   </body>
 </html>
